<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>xaf-servlet</artifactId>
	<groupId>mc.gouv.xaf</groupId>
	<version>10.3.0-rc2</version>
	<packaging>war</packaging>

	<parent>
		<groupId>mc.gouv.pom</groupId>
		<artifactId>super-pom-war-frontoffice</artifactId>
		<version>1.44.20</version>
		<relativePath />
	</parent>
	
	<properties>
		<vscan.version>1.0.0</vscan.version>
	</properties>

	<build>
		<finalName>AppFactoryServlet</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<configuration>
					<httpConnector>
						<port>20041</port>
						<host>127.0.0.1</host>
					</httpConnector>
					<stopKey>STOPITNOW</stopKey>
					<stopPort>20049</stopPort>
					<webApp>
						<contextPath>/appfactoryservlet</contextPath>
					</webApp>
					<systemProperties>
						<systemProperty>
							<name>MC_GOUV_PROPERTIES_FILE</name>
							<value>file:///d:/java_dev_env/propertiesJETTY/mc.gouv.properties</value>
						</systemProperty>
						<systemProperty>
							<name>org.slf4j.simpleLogger.defaultLogLevel</name>
							<value>debug</value>
						</systemProperty><!-- Fix problem with slf4j being in both the jetty 
							and webapp classloader -->
						<systemProperty>
							<name>org.eclipse.jetty.server.webapp.parentLoaderPriority</name>
							<value>true</value>
						</systemProperty>
					</systemProperties>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-simple</artifactId>
						<version>1.7.5</version>
					</dependency>
					<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>log4j-over-slf4j</artifactId>
						<version>1.7.5</version>
					</dependency>
					<dependency>
						<groupId>org.slf4j</groupId>
						<artifactId>jul-to-slf4j</artifactId>
						<version>1.7.5</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<configuration>
					<attachClasses>true</attachClasses>
					<classesClassifier>classes</classesClassifier>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>8</source>
					<target>8</target>
				</configuration>
			</plugin>

		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.tanesha.recaptcha4j</groupId>
			<artifactId>recaptcha4j</artifactId>
			<version>0.0.7</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.uuid</groupId>
			<artifactId>java-uuid-generator</artifactId>
			<version>3.1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>fluent-hc</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>mc.gouv.tools_jar</groupId>
			<artifactId>tools_jar</artifactId>
			<version>3.0.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>commons-fileupload</groupId>
			<artifactId>commons-fileupload</artifactId>
			<version>1.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpmime</artifactId>
			<version>4.5.1</version>
		</dependency>

		<dependency>
			<groupId>mc.gouv.xaf</groupId>
			<artifactId>xaf-apiclient</artifactId>
			<version>10.3.0-rc2</version>
		</dependency>

        <dependency>
            <groupId>mc.gouv.vscan</groupId>
            <artifactId>vscan-shared</artifactId>
            <version>${vscan.version}</version>
        </dependency>
		<dependency>
			<groupId>mc.gouv.xaf</groupId>
			<artifactId>xaf-apiclient-paiement</artifactId>
			<version>10.3.0-rc2</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

  <scm>
    <tag>xaf-10.3.0-rc2</tag>
  </scm>
</project>
